--- a/notebook/EDA_STUDENTS.ipynb
+++ b/notebook/EDA_STUDENTS.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e0937e5d",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "'/Users/apple/Desktop/ML_PROJECT/venv/bin/python'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "06d9f2e1",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "78d15399",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "120b3a29",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "dd973d6a",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "99233d93",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "4               completed          86             27             31  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "bb86bab8",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "(1002, 9)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,21 +849,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14e925e8",
+   "id": "c1530a3c",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "Insights \n",
-    "\n",
-    "* stanadard lunch students perform better than free/reduced lunch students.\n",
-    "* This trend is more pronounced among\n",
-    "* standar lunch helps perform well in exams"
-   ]
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mcolumns\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1530a3c",
+   "id": "7dd3d955",
    "metadata": {},
    "outputs": [],
    "source": []
